--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "http-errors": "^1.7.3",
+    "morgan": "~1.9.1",
+    "request": "^2.88.0"
   }
 }
